example/bookstore/contour/30-gateway-class.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: contour
spec:
  controllerName: projectcontour.io/gateway-controller
